--- a/assets/css/Header-Blue.css
+++ b/assets/css/Header-Blue.css
@@ -12,256 +12,69 @@ font-family:'Source Sans Pro', sans-serif;
 
 }
 
-@media (max-width:767px) {
-  .header-blue{
-    padding-bottom:80px;
+.header-blue .navbar .navbar-brand {
+  color :rgb(143,87,123);
+  font-size: 2em;
+  font-weight: bolder;
+  margin-left: 4%;
   }
+
+  .header-blue .navbar .navbar-brand:hover {
+    color :#504251;;
+    font-size: 2em;
+    font-weight: bolder;
+    }
+
+  .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .show>.nav-link {
+    color: rgb(143,87,123);
+    font-weight: bold;
 }
-
-.header-blue .navbar{
-  background:transparent;
-  padding-top:12px;
-  padding-bottom:10px;
-  color:#fff;
-  border-radius:0;
-  box-shadow:none;
-  border:none;
-}
-
-@media (max-width:767px) {
-  .header-blue .navbar{
-    padding-top:0;
-    padding-bottom:0;
-  }
-}
-
-@media (max-width:767px) {
-  .header-blue .navbar .navbar-header{
-    padding-top:10px;
-    padding-bottom:10px;
-  }
-}
-
-@media (max-width:767px) {
-  .header-blue .navbar .navbar-right{
-    margin-bottom:20px;
-  }
-}
-
-.header-blue .navbar .navbar-brand{
-  font-weight:bold;
-  color:inherit;
-}
-
-.header-blue .navbar .navbar-brand:hover{
-  color:#f0f0f0;
-}
-
-.header-blue .navbar .navbar-brand img{
-  height:100%;
-  display:inline-block;
-  margin-right:10px;
-  width:auto;
-}
-
-.header-blue .navbar .navbar-collapse p{
-  margin-top:10px;
-  margin-bottom:0;
-}
-
-.header-blue .navbar .navbar-collapse p .login{
-  color:#d9d9d9;
-  margin-right:10px;
-  text-decoration:none;
-}
-
-.header-blue .navbar .navbar-collapse p .login:hover{
-  color:#fff;
-}
-
-.header-blue .navbar .navbar-toggle{
-  border-color:rgba(255,255,255,0.3);
-}
-
-.header-blue .navbar .navbar-toggle:hover, .header-blue .navbar-toggle:focus{
-  background:none;
-}
-
-.header-blue.navbar .navbar-toggle .icon-bar{
-  background-color:#eee;
-}
-
-.header-blue .navbar-collapse{
-
- color: #37434d;
-}
-
-.header-blue .navbar .navbar-nav > .active > a, .header-blue .navbar .navbar-nav > .open > a{
-  background:none;
-  box-shadow:none;
-}
-
-.header-blue .navbar.navbar-default .navbar-nav > .active > a, .header-blue .navbar.navbar-default .navbar-nav > .active > a:focus, .header-blue .navbar.navbar-default .navbar-nav > .active > a:hover{
-  color:rgba(255,255,255,0.3);
-  box-shadow:none;
-  background:none;
-  pointer-events:none;
-}
-
-.header-blue .navbar.navbar .navbar-nav > li > a{
-  padding-left:18px;
-  padding-right:18px;
-}
-
-.header-blue .navbar.navbar-default .navbar-nav > li > a{
-  color:#d9d9d9;
-}
-
-.header-blue .navbar.navbar-default .navbar-nav > li > a:focus, .header-blue .navbar.navbar-default .navbar-nav > li > a:hover{
-  color:#fcfeff !important;
-  background-color:transparent;
-}
-
-.header-blue .navbar .navbar-nav > li > .dropdown-menu{
-  margin-top:-5px;
-  box-shadow:0 4px 8px rgba(0,0,0,.1);
-  background-color:#fff;
-  border-radius:2px;
-}
-
-.header-blue .navbar .dropdown-menu > li > a:focus, .header-blue .navbar .dropdown-menu > li > a{
-  line-height:2;
-  font-size:14px;
-  color:#37434d;
-}
-
-.header-blue .navbar .dropdown-menu > li > a:focus, .header-blue .navbar .dropdown-menu > li > a:hover{
-  background:rgb(139,79,115);
-}
-
-@media (max-width:767px) {
-  .header-blue .navbar .navbar-nav .open .dropdown-menu{
-    box-shadow:none;
-    background:none;
-    color:#fff;
-  }
-}
-
-@media (max-width:767px) {
-  .header-blue .navbar .navbar-nav .open .dropdown-menu > li > a{
-    color:#fdfeff;
-    padding-top:12px;
-    padding-bottom:12px;
-    line-height:1;
-  }
-}
-
-.header-blue .action-button, .header-blue .action-button:active{
-  border:1px solid rgba(255,255,255,0.7);
-  border-radius:20px;
-  color:#ebeff1;
-  box-shadow:none;
-  text-shadow:none;
-  padding:6px 15px;
-  background:transparent;
-  transition:background-color 0.25s;
-  outline:none;
-}
-
-.header-blue .action-button:hover{
-  color:rgb(144,135,164);
-  background: white;
-}
-
-.header-blue .action-button.btn-lg{
-  padding:7px 18px;
-}
-
-.header-blue .navbar .navbar-form label{
-  color:#ccc;
-}
-
-.header-blue .navbar .navbar-form .search-field{
-  background:none;
-  border:none;
-  border-bottom:1px solid transparent;
-  border-radius:0;
-  color:#ccc;
-  box-shadow:none;
-  color:inherit;
-  transition:border-bottom-color 0.3s;
-}
-
-@media (max-width:767px) {
-  .header-blue .navbar .navbar-form .search-field{
-    display:inline-block;
-    width:80%;
-  }
-}
-
-.header-blue .navbar .navbar-form .search-field:focus{
-  border-bottom:1px solid #ccc;
+.navbar-light .navbar-nav .nav-link.active:hover, .navbar-light .navbar-nav .show>.nav-link:hover {
+  color :#504251;;
 }
 
 .header-blue .hero{
   margin-top:60px;
+  margin-left: 4%;
 }
 
-@media (max-width:767px) {
-  .header-blue .hero{
-    margin-top:20px;
-    text-align:center;
-  }
-}
 
 .header-blue .hero h1{
-  color:#fff;
+  color: #504251;
   font-size:40px;
-  margin-top:190px;
+  margin-top: 10%;
   margin-bottom:24px;
   font-weight:300;
 }
 
-@media (max-width:991px) {
-  .header-blue .hero h1{
-    margin-top:0;
-    margin-bottom:15px;
-    line-height:1.4;
-  }
-}
 
 .header-blue .hero p{
-  color:rgba(255,255,255,0.8);
+  color: #504251;
   font-size:20px;
   margin-bottom:30px;
   font-weight:300;
 }
-a .engras{
+.d-flex {
+  margin-right: 4%;
+}
+
+
+.btn-outline-success {
+  color:rgb(143,87,123);
+  border-color: rgb(143,87,123);
+  border-radius: 30px;
   font-weight: bold;
-  color: rgb(139,79,115)
 }
 
-
-
-.header-blue .navbar.navbar-default .navbar-nav > .active > a{
-color :rgb(143,87,123);
-font-weight: bold;
+.btn-outline-success:hover {
+  color:rgb(248, 248, 248);
+  background-color: rgb(143,87,123);;
+  border-color: rgb(143,87,123);
+  border-radius: 30px;
 }
-.header-blue .navbar .navbar-brand {
-color :rgb(143,87,123);
-font-size: 2em;
-}
-.header-blue .action-button{
-  color :rgb(143,87,123);
-  border: solid 1px rgb(143,87,123);
-}
-.header-blue .hero h1{
-  margin-top: 150px;
-  margin-left: 0;
-}
-#bon{
-margin-left: 0;
-padding-left: 1px;
-padding-right: 1px;
-
+.btn-outline-success:active {
+  color:rgb(248, 248, 248);
+  background-color: rgb(143,87,123);;
+  border-color: rgb(143,87,123);
+  border-radius: 30px;
 }
