--- a/assets/css/Header-Blue.css
+++ b/assets/css/Header-Blue.css
@@ -66,15 +66,28 @@ font-family:'Source Sans Pro', sans-serif;
   font-weight: bold;
 }
 
-.btn-outline-success:hover {
-  color:rgb(248, 248, 248);
-  background-color: rgb(143,87,123);;
-  border-color: rgb(143,87,123);
-  border-radius: 30px;
-}
+
 .btn-outline-success:active {
   color:rgb(248, 248, 248);
   background-color: rgb(143,87,123);;
   border-color: rgb(143,87,123);
   border-radius: 30px;
+
+}
+
+.btn-outline-success:hover {
+  color:rgb(248, 248, 248);
+  background-color: rgb(143,87,123);;
+  border-color: rgb(143,87,123);
+  border-radius: 30px;
+  box-shadow: 0 0 0 0.25rem rgb(143 87 123 / 50%);
+}
+#aide:hover:focus {
+  box-shadow: none;
+}
+#aide:focus {
+  box-shadow: none;
+}
+.btn-outline-success:hover:focus{
+  box-shadow: 0 0 0 0.25rem rgb(143 87 123 / 50%);
 }
