--- a/assets/css/Header-Blue.css
+++ b/assets/css/Header-Blue.css
@@ -2,7 +2,7 @@ body{
 background-image: url(../img/Home.jpg);
  margin: 0;
  padding: 0;
- background-size: 150%;
+ background-size: 130%;
  background-repeat: no-repeat;
  
 }
@@ -14,20 +14,20 @@ font-family:'Source Sans Pro', sans-serif;
 
 .header-blue .navbar .navbar-brand {
   color :rgb(143,87,123);
-  font-size: 2em;
+  font-size: 3em;
   font-weight: bolder;
   margin-left: 4%;
   }
 
   .header-blue .navbar .navbar-brand:hover {
-    color :#504251;;
-    font-size: 2em;
+    color :#504251;
     font-weight: bolder;
     }
 
   .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .show>.nav-link {
     color: rgb(143,87,123);
     font-weight: bold;
+    font-size: 1.3em;
 }
 .navbar-light .navbar-nav .nav-link.active:hover, .navbar-light .navbar-nav .show>.nav-link:hover {
   color :#504251;;
@@ -38,13 +38,19 @@ font-family:'Source Sans Pro', sans-serif;
   margin-left: 4%;
 }
 
+.logo{
+  max-width: 5%;
+ max-height: 5%;
+ margin-left: 4%;
+}
 
 .header-blue .hero h1{
   color: #504251;
   font-size:40px;
   margin-top: 10%;
   margin-bottom:24px;
-  font-weight:300;
+  font-weight:bold;
+  font-size: 3em;
 }
 
 
@@ -53,6 +59,7 @@ font-family:'Source Sans Pro', sans-serif;
   font-size:20px;
   margin-bottom:30px;
   font-weight:300;
+  font-size: 1.5em;
 }
 .d-flex {
   margin-right: 4%;
@@ -64,6 +71,7 @@ font-family:'Source Sans Pro', sans-serif;
   border-color: rgb(143,87,123);
   border-radius: 30px;
   font-weight: bold;
+  font-size: 1.5em;
 }
 
 
