--- a/forgetPassword/forgetPassword.css
+++ b/forgetPassword/forgetPassword.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background-image: url(../Connect/images/Home.png);
+    background-image: url(../log_in_up/images/Home.png);
     background-size: 180%;
     display: flex;
     justify-content: center;
@@ -131,7 +131,7 @@ button.ghost:hover {
 }
 
 form {
-    background-image: url(../Connect/images/bgk.png);
+    background-image: url(../log_in_up/images/bgk.png);
     background-size: 200%;
     background-repeat: no-repeat;
     display: flex;
