--- a/assets/css/Header-Blue.css
+++ b/assets/css/Header-Blue.css
@@ -1,76 +1,88 @@
-body{
-background-image: url(../img/Home.jpg);
- margin: 0;
- padding: 0;
- background-size: 150%;
- background-repeat: no-repeat;
- 
+body {
+  background-image: url(../img/Home.jpg);
+  margin: 0;
+  padding: 0;
+  background-size: 150%;
+  background-repeat: no-repeat;
+
 }
 
-.header-blue{
-font-family:'Source Sans Pro', sans-serif;
+.header-blue {
+  font-family: 'Source Sans Pro', sans-serif;
 
 }
 
 .header-blue .navbar .navbar-brand {
-  color :rgb(143,87,123);
+  color: rgb(143, 87, 123);
   font-size: 3em;
   font-weight: bolder;
   margin-left: 0%;
   margin-right: 20px;
-  }
-
-  .header-blue .navbar .navbar-brand:hover {
-    color :#504251;
-    font-weight: bolder;
-    }
-
-  .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .show>.nav-link {
-    color: rgb(143,87,123);
-    font-weight: bold;
-    font-size: 1.3em;
-}
-.navbar-light .navbar-nav .nav-link.active:hover, .navbar-light .navbar-nav .show>.nav-link:hover {
-  color :#504251;;
 }
 
-.header-blue .hero{
-  margin-top:60px;
+.header-blue .navbar .navbar-brand:hover {
+  color: #504251;
+  font-weight: bolder;
+}
+
+.navbar-light .navbar-nav .nav-link.active,
+.navbar-light .navbar-nav .show>.nav-link {
+  color: rgb(143, 87, 123);
+  font-weight: bold;
+  font-size: 1.3em;
+}
+
+.navbar-light .navbar-nav .nav-link.active:hover,
+.navbar-light .navbar-nav .show>.nav-link:hover {
+  color: #504251;
+  ;
+}
+
+.header-blue .hero {
+  margin-top: 60px;
   margin-left: 4%;
 }
 
-.logo{
-  max-width: 3%;
- max-height: 3%;
- margin-left: 0.5%;
- position: relative;
+.logo {
+  max-height: 15%;
+  margin-left: 0.5%;
+  position: relative;
 }
 
-.header-blue .hero h1{
+.logo:hover {
+  max-height: 15%;
+  margin-left: 0.5%;
+  position: relative;
+  -ms-transform: scale(1.2);
+  -webkit-transform: scale(1.2);
+  transform: scale(1.2);
+}
+
+.header-blue .hero h1 {
   color: #504251;
-  font-size:40px;
+  font-size: 40px;
   margin-top: 10%;
-  margin-bottom:24px;
-  font-weight:bold;
+  margin-bottom: 24px;
+  font-weight: bold;
   font-size: 3em;
 }
 
 
-.header-blue .hero p{
+.header-blue .hero p {
   color: #504251;
-  font-size:20px;
-  margin-bottom:30px;
-  font-weight:300;
+  font-size: 20px;
+  margin-bottom: 30px;
+  font-weight: 300;
   font-size: 1.5em;
 }
+
 .d-flex {
   margin-right: 4%;
 }
 
-
 .btn-outline-success {
-  color:rgb(143,87,123);
-  border-color: rgb(143,87,123);
+  color: rgb(143, 87, 123);
+  border-color: rgb(143, 87, 123);
   border-radius: 30px;
   font-weight: bold;
   font-size: 1.5em;
@@ -78,26 +90,31 @@ font-family:'Source Sans Pro', sans-serif;
 
 
 .btn-outline-success:active {
-  color:rgb(248, 248, 248);
-  background-color: rgb(143,87,123);;
-  border-color: rgb(143,87,123);
+  color: rgb(248, 248, 248);
+  background-color: rgb(143, 87, 123);
+  ;
+  border-color: rgb(143, 87, 123);
   border-radius: 30px;
 
 }
 
 .btn-outline-success:hover {
-  color:rgb(248, 248, 248);
-  background-color: rgb(143,87,123);;
-  border-color: rgb(143,87,123);
+  color: rgb(248, 248, 248);
+  background-color: rgb(143, 87, 123);
+  ;
+  border-color: rgb(143, 87, 123);
   border-radius: 30px;
   box-shadow: 0 0 0 0.25rem rgb(143 87 123 / 50%);
 }
+
 #aide:hover:focus {
   box-shadow: none;
 }
+
 #aide:focus {
   box-shadow: none;
 }
-.btn-outline-success:hover:focus{
+
+.btn-outline-success:hover:focus {
   box-shadow: 0 0 0 0.25rem rgb(143 87 123 / 50%);
 }
