--- a/public/session/log_in_up.css
+++ b/public/session/log_in_up.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-image: url(./images/Home.png);
+    background-image: url(../images/Home.png);
     background-size: 180%;
     display: flex;
     justify-content: center;
@@ -90,7 +90,7 @@ button.ghost:hover {
 }
 
 form {
-    background-image: url(./images/bgk.png);
+    background-image: url(../images/bgk.png);
     background-size: 200%;
     background-repeat: no-repeat;
     display: flex;
