--- a/views/forgetPassword/forgetPassword.html
+++ b/views/forgetPassword/forgetPassword.html
@@ -13,8 +13,8 @@
 
   <body>
     <nav>
-      <a href="../index.html"
-        ><img class="log" src="../log_in_up/images/logo.png" alt=""
+      <a href="../session/log_in_up.html"
+        ><img class="log" src="../images/logo.png" alt=""
       /></a>
     </nav>
     <div class="container" id="container">
