--- a/views/forgot_Success.html
+++ b/views/forgot_Success.html
@@ -10,11 +10,11 @@
 
   <body>
     <nav>
-      <a href="log_in_up.html"
+      <a href="log_in_up"
         ><img class="loginup" src="../../images/logo.png" alt=""
       /></a>
     </nav>
-    <form action="/Signup_Success" method="get" id="card" class="animated fadeIn" style="background-image: none;">
+    <form action="/forgot_Success" method="get" id="card" class="animated fadeIn" style="background-image: none;">
       <div class="sign-success">
         <div id="upper-side">
           <svg
@@ -48,7 +48,8 @@
           <h3 id="status">SUCCÈS</h3>
         </div>
         <div action="/log" method="get" id="lower-side">
-          <p id="message">Félicitations, votre compte a été créé avec succès.</p>
+          <p id="message">
+            Félicitations, votre mot de passe a été réinitialiser avec succès.</p>
           <a href="log_in" id="contBtn">Continuez</a>
         </div>
       </div>
