--- a/views/home.html
+++ b/views/home.html
@@ -11,7 +11,7 @@
   <link href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" rel="stylesheet" />
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-  <link rel="stylesheet" href="../public/stylesheets/style.css" />
+  <link rel="stylesheet" href="../../stylesheets/style.css" />
 </head>
 
 <body>
@@ -19,7 +19,7 @@
     <div class="header-blue">
       <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="home.html"><img class="logo" src="../public/images/logo.png" alt="" /></a>
+          <a class="navbar-brand" href="home.html"><img class="logo" src="../../images/logo.png" alt="" /></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" id="bon">
             <span class="navbar-toggler-icon"></span>
@@ -28,7 +28,7 @@
             <ul class="navbar-nav ml-auto navbar-right-top">
               <li class="nav-item dropdown nav-user">
                 <a class="nav-link nav-user-img" href="#" id="navbarDropdownMenuLink2" data-toggle="dropdown"
-                  aria-haspopup="true" aria-expanded="false"><img src="../public/images/icone.png" alt="" id="aH"
+                  aria-haspopup="true" aria-expanded="false"><img src="../../images/icone.png" alt="" id="aH"
                     class="user-avatar-md rounded-circle" /></a>
                 <div class="dropdown-menu dropdown-menu-right nav-user-dropdown"
                   aria-labelledby="navbarDropdownMenuLink2">
@@ -40,7 +40,7 @@
                     </h5>
                     <span class="status"></span>
                   </div>
-                  <a class="dropdown-item" href="profil.html"><i class="fas fa-user mr-2"></i>Profil</a>
+                  <a class="dropdown-item" href="profil"><i class="fas fa-user mr-2"></i>Profil</a>
 
                   <a class="dropdown-item" href="logout"> <i class="fas fa-power-off mr-2"></i>Déconnexion</a>
                 </div>
@@ -50,6 +50,7 @@
 
       </nav>
 
+     <form action="/home" method="get">
       <div class="container hero">
         <div class="row">
           <div class="col-sm-6" id="bon">
@@ -57,6 +58,7 @@
 
        
           </div>
+     </form>
         </div>
       </div>
     </div>
