--- a/views/log_in_up.html
+++ b/views/log_in_up.html
@@ -111,7 +111,7 @@
             required
             autocomplete="off"
           />
-          <a href="forgetPassword.html" class="mpo"
+          <a href="forgot" class="mpo"
             ><strong>Mot de passe oublié ?</strong></a
           >
           <button type="submit">Se connecter</button>
