--- a/views/forgot.html
+++ b/views/forgot.html
@@ -4,7 +4,7 @@
     <title>Bienvenue sur le site officiel du JEERE</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="../public/stylesheets/forgetPassword.css" />
+    <link rel="stylesheet" type="text/css" href="../../stylesheets/forgetPassword.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.0.7/css/all.css"
@@ -13,8 +13,8 @@
 
   <body>
     <nav>
-      <a href="log_in_up.html"
-        ><img class="log" src="../public/images/logo.png" alt=""
+      <a href="log_in_up"
+        ><img class="log" src="../../images/logo.png" alt=""
       /></a>
     </nav>
     <div class="container" id="container">
@@ -32,6 +32,7 @@
             placeholder="Email"
             autocomplete="off"
             required
+            name="email"
             pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
           />
 
