--- a/views/reset.html
+++ b/views/reset.html
@@ -4,7 +4,7 @@
     <title>Bienvenue sur le site officiel du JEERE</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="../public/stylesheets/forgetPassword.css" />
+    <link rel="stylesheet" type="text/css" href="../../stylesheets/forgetPassword.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.0.7/css/all.css"
@@ -13,8 +13,8 @@
 
   <body>
     <nav>
-      <a href="log_in_up.html"
-        ><img class="log" src="../public/images/logo.png" alt=""
+      <a href="log_in_up"
+        ><img class="log" src="../../images/logo.png" alt=""
       /></a>
     </nav>
     <div class="container" id="container">
@@ -25,6 +25,7 @@
             Veuillez renseigner votre nouveau mot de passe afin de pouvoir se connecter.
           </div>
           <!-- <span>or use your account</span> -->
+         <label for="password">
           <input
           type="password"
           id="password"
@@ -33,18 +34,22 @@
           class="form-control"
           placeholder="Nouveau Mot de passe"
           required
+          autofocus=true
           pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$"
         />
+         </label>
 
+      <label for="confirm">
         <input
-          type="password"
-          class="form-control"
-          placeholder="Confirmer mot de passe"
-          autocomplete="off"
-          name="Confirmer"
-          id="Confirmer"
-          required
-        />
+        type="password"
+        class="form-control"
+        placeholder="Confirmer mot de passe"
+        autocomplete="off"
+        name="confirm"
+        id="Confirmer"
+        required
+      />
+      </label>
 
           <button id="send" type="submit">Envoyer</button>
         </form>
