--- a/views/home.html
+++ b/views/home.html
@@ -40,9 +40,12 @@
                     </h5>
                     <span class="status"></span>
                   </div>
-                  <a class="dropdown-item" href="profil"><i class="fas fa-user mr-2"></i>Profil</a>
+                  <div  method="get">
+                    
+                  <a class="dropdown-item" href="profil"><i class="fas fa-user mr-2">Profil</i></a>
 
-                  <a class="dropdown-item" href="logout"> <i class="fas fa-power-off mr-2"></i>Déconnexion</a>
+                  <a class="dropdown-item" href="logout"> <i class="fas fa-power-off mr-2">Déconnexion</i></a>
+                  </div>
                 </div>
               </li>
             </ul>
