--- a/views/update.html
+++ b/views/update.html
@@ -40,7 +40,7 @@
                     </h5>
                     <span class="status"></span>
                   </div>
-                  <a class="dropdown-item" href="profil"><i class="fas fa-user mr-2"></i>Profil</a>
+                  <a class="dropdown-item" href="update"><i class="fas fa-user mr-2"></i>Profil</a>
 
                   <a class="dropdown-item" href="logout"> <i class="fas fa-power-off mr-2"></i>Déconnexion</a>
                 </div>
