--- a/views/forgot_Success.html
+++ b/views/forgot_Success.html
@@ -14,7 +14,7 @@
         ><img class="loginup" src="../../images/logo.png" alt=""
       /></a>
     </nav>
-    <form action="/forgot_Success" method="get" id="card" class="animated fadeIn" style="background-image: none;">
+    <form action="/reset/forgot_Success" method="get" id="card" class="animated fadeIn" style="background-image: none;">
       <div class="sign-success">
         <div id="upper-side">
           <svg
