--- a/views/reset.html
+++ b/views/reset.html
@@ -4,7 +4,7 @@
     <title>Bienvenue sur le site officiel du JEERE</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="../../stylesheets/forgetPassword.css" />
+    <link rel="stylesheet" type="text/css" href="../public/stylesheets/forgetPassword.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.0.7/css/all.css"
@@ -14,7 +14,7 @@
   <body>
     <nav>
       <a href="log_in_up"
-        ><img class="log" src="../../images/logo.png" alt=""
+        ><img class="log" src="../public/images/logo.png" alt=""
       /></a>
     </nav>
     <div class="container" id="container">
