--- a/views/index.html
+++ b/views/index.html
@@ -19,7 +19,7 @@
       <div class="header-blue">
         <nav class="navbar navbar-expand-lg navbar-light">
           <div class="container-fluid">
-            <a class="navbar-brand" href="index.html"
+            <a class="navbar-brand" href="index"
               ><img class="logo" src="../../images/logo.png" alt=""
             /></a>
             <button
