--- a/views/reset.html
+++ b/views/reset.html
@@ -4,52 +4,84 @@
     <title>Bienvenue sur le site officiel du JEERE</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="../../stylesheets/forgetPassword.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="../public/stylesheets/forgetPassword.css"
+    />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.0.7/css/all.css"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
   </head>
 
   <body>
-    <nav>
-      <a href="log_in_up"
-        ><img class="log" src="../../images/logo.png" alt=""
-      /></a>
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index"
+          ><img class="logo" src="../public/images/logo.png" alt=""
+        /></a>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+          <form
+            class="d-flex"
+            action="log_in_up"
+            method="get"
+            style="background-image: none"
+          >
+            <button
+              class="btn btn-outline-success"
+              style="
+                background-color: #a66d92;
+                color: white;
+                border-color: #a66d92;
+              "
+            >
+              Se connecter
+            </button>
+          </form>
+        </div>
+      </div>
     </nav>
     <div class="container" id="container">
       <div class="form-container sign-in-container">
         <form action="/reset/:token" method="post">
           <h1 id="cool">DEMANDE D'UN NOUVEAU MOT DE PASSE</h1>
           <div id="focus">
-            Veuillez renseigner votre nouveau mot de passe afin de pouvoir se connecter.
+            Veuillez renseigner votre nouveau mot de passe afin de pouvoir se
+            connecter.
           </div>
           <!-- <span>or use your account</span> -->
-         <label for="password">
-          <input
-          type="password"
-          id="password"
-          name="password"
-          title="Minimum de 8 caractères, une majuscule, un chiffre et un caractère spécial qui n'est pas le @ "
-          class="form-control"
-          placeholder="Nouveau Mot de passe"
-          required
-          autofocus=true
-          pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$"
-        />
-         </label>
+          <label for="password" class="inp">
+            <input
+              type="password"
+              id="password"
+              name="password"
+              title="Minimum de 8 caractères, une majuscule, un chiffre et un caractère spécial qui n'est pas le @ "
+              class="form-control"
+              placeholder="Nouveau Mot de passe"
+              required
+              autofocus="true"
+              pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$"
+            />
+          </label>
 
-      <label for="confirm">
-        <input
-        type="password"
-        class="form-control"
-        placeholder="Confirmer mot de passe"
-        autocomplete="off"
-        name="confirm"
-        id="Confirmer"
-        required
-      />
-      </label>
+          <label for="confirm" class="inp"> 
+            <input
+              type="password"
+              class="form-control"
+              placeholder="Confirmer mot de passe"
+              autocomplete="off"
+              name="confirm"
+              id="Confirmer"
+              required
+            />
+          </label>
 
           <button id="send" type="submit">Envoyer</button>
         </form>
@@ -82,5 +114,20 @@
         </div>
       </div>
     </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+      integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+      integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
